2015-03-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* Recognize 01-Jan-1970 as a valid RFC 822 date.

2015-02-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Update to courier-unicode 1.2.

5.8.0

2014-12-13  Sam Varshavchik  <mrsam@courier-mta.com>

	* Update autotools

5.7.3

2014-07-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* gpglib, rfc2045: fix makefiles.

2014-07-13  Sam Varshavchik  <mrsam@courier-mta.com>

	* liblock, couriertls: fix compilation for OpenBSD -- based on a
	patch from Giovanni Bechis <giovanni@paclan.it>.

2014-04-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier.spec.in: Update to use systemd macros.

2014-02-15  "Alexei Batyr'" <lehel@pcmag.ru>

	* Fix wrong path in Makefile.

2014-01-12  Sam Varshavchik  <mrsam@courier-mta.com>

	* Factored out the unicode library into a separate package.

2013-12-29  Sam Varshavchik  <mrsam@courier-mta.com>

	* libunicode: Updated unicode word, grapheme, and linebreaking rules
	* to the Unicode 6.3.0 standard.

5.7.2

2013-12-23  Sam Varshavchik  <mrsam@courier-mta.com>

	* folder.c (do_folderlist): Fix some badness caused by corrupted
	ACLs. If filesystem corruption created garbage ACL files, some badness
	can result here, leading to inaccessible folders, and sqwebmaild
	pinning the CPU.

5.7.1

2013-11-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix various compiler warnings about unchecked results from setuid
	and setgid calls.

5.7.0

2013-08-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* sqwebmail: update the maildrop rule generator to support UTF-8-able
	maildrop.

5.6.1

2013-02-20  Sam Varshavchik  <mrsam@courier-mta.com>

	* Autotool chain update.

	* rfc822: workaround for invalid utf-8 input making libidn go off the
	rails.

2012-12-04  Alessandro Vesely <vesely@tana.it>

	* rfc2045/makemime.c (openfile_or_pipe): Do not dup stdin filedesc,
	sometimes the stdin buffer already gets filled.

5.6.0

2012-09-05  Sam Varshavchik  <mrsam@courier-mta.com>
